# OpenCVCPlusPlus

./: CMakeLists.txt
scripts/: setup.sh
src/: main.cpp
